不要メモ削除

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="loading-container">
@@ -74,10 +74,6 @@
         </div>
         <div class="home-slider__container">
           <img src="img/top-image-3.jpg" alt="">
-          <!-- <div class="home-slider__text">
-            <h1>TSUMAYA</h1>
-            <p>SWEETPOTATO</p>
-          </div> -->
         </div>
       </div>
       <div class="home-slider__text">
